# rs-wnfs

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  .rustfmt.toml  Cargo.toml  README.md  clippy.toml  codecov.yaml  deny.toml  release-please-config.json
crates/fs/: Cargo.toml  README.md  lib.rs  traits.rs
crates/fs/benches/: hamt.rs  namefilter.rs
crates/fs/common/: async_serialize.rs  blockstore.rs  constants.rs  encoding.rs  error.rs  link.rs  macros.rs  metadata.rs  mod.rs  model.rs  pathnodes.rs  referenceable.rs  result.rs  utils.rs
crates/fs/examples/: private.rs  public.rs
crates/fs/private/: directory.rs  file.rs  forest.rs  key.rs  link.rs  mod.rs  node.rs  previous.rs  rng.rs  store.rs
crates/fs/private/hamt/: constants.rs  error.rs  hamt.rs  hash.rs  hashbits.rs  mod.rs  node.rs  pointer.rs
crates/fs/private/namefilter/: bloomfilter.rs  error.rs  mod.rs  namefilter.rs
crates/fs/public/: directory.rs  file.rs  link.rs  mod.rs  node.rs
crates/wasm/: .gitignore  Cargo.toml  README.md  index.html  index.js  lib.rs  package-lock.json  package.json  playwright.config.ts  tsconfig.json  webpack.config.js
crates/wasm/examples/basic/: index.html  index.js
crates/wasm/examples/common/: index.css  render.js  tree.js
crates/wasm/examples/graph/: fission.yaml  index.css  index.html  index.js  render.js  tree.js  wasm_wnfs.js  wasm_wnfs_bg.wasm  webpack.config.js
crates/wasm/examples/interactive/: index.html  index.js
crates/wasm/fs/: blockstore.rs  metadata.rs  mod.rs  utils.rs
crates/wasm/fs/private/: directory.rs  file.rs  forest.rs  mod.rs  namefilter.rs  rng.rs  store.rs
crates/wasm/fs/public/: directory.rs  file.rs  mod.rs  node.rs
crates/wasm/tests/: fs.spec.ts  index.html  index.js  mock.ts  mocks.ts  private.spec.ts  public.spec.ts  spec.d.ts
crates/wasm/tests/server/: index.d.ts  index.ts  webpack.config.js
wnfs/: CHANGELOG.md  Cargo.toml  README.md  cbindgen.toml  wnfs.h
wnfs-bench/: Cargo.toml  hamt.rs  lib.rs  nameaccumulator.rs  namefilter.rs  public.rs
wnfs-bench/lib/: lib.rs
wnfs-c/: Cargo.toml  README.md
wnfs-c/src/: lib.rs
wnfs-common/: CHANGELOG.md  Cargo.toml  README.md
wnfs-common/src/: async_serialize.rs  block.rs  blockstore.rs  encoding.rs  error.rs  lib.rs  link.rs  metadata.rs  pathnodes.rs  storable.rs  traits.rs  utils.rs
wnfs-common/src/blockstore/: carblockstore.rs  diskblockstore.rs  memoryblockstore.rs  mod.rs  pinch.code-workspace  threadsafememoryblockstore.rs
wnfs-common/src/utils/: common.rs  mod.rs  send_sync_poly.rs  test.rs
wnfs-hamt/: CHANGELOG.md  Cargo.toml  README.md  error.rs
wnfs-hamt/proptest-regressions/: diff.txt  node.txt
wnfs-hamt/src/: constants.rs  diff.rs  error.rs  hamt.rs  hash.rs  lib.rs  merge.rs  node.rs  pointer.rs  prolly.rs  serializable.rs
wnfs-hamt/src/diff/: key_value.rs  node.rs
wnfs-hamt/src/snapshots/: wnfs_hamt__hamt__snapshot_tests__hamt.snap  wnfs_hamt__hamt__snapshot_tests__hamt.snap.new  wnfs_hamt__hamt__snapshot_tests__root_tree.snap  wnfs_hamt__node__snapshot_tests__node.snap  wnfs_hamt__node__snapshot_tests__node.snap.new  wnfs_hamt__node__snapshot_tests__root_tree.snap  wnfs_hamt__pointer__snapshot_tests__pointer.snap  wnfs_hamt__pointer__snapshot_tests__pointer.snap.new  wnfs_hamt__pointer__snapshot_tests__root_tree.snap
wnfs-hamt/src/strategies/: changes.rs  kv.rs  mod.rs  operations.rs
wnfs-nameaccumulator/: CHANGELOG.md  Cargo.toml  README.md
wnfs-nameaccumulator/proptest-regressions/: lib.txt  name.txt
wnfs-nameaccumulator/src/: biguint_serde_le.rs  error.rs  fns.rs  lib.rs  name.rs  traits.rs  uint256_serde_be.rs  uint256_serde_le.rs
wnfs-nameaccumulator/src/snapshots/: wnfs_nameaccumulator__name__snapshot_tests__name_accumulator.snap  wnfs_nameaccumulator__name__snapshot_tests__name_accumulator.snap.new
wnfs-namefilter/: CHANGELOG.md  Cargo.toml  README.md
wnfs-namefilter/src/: bloomfilter.rs  lib.rs  namefilter.rs
wnfs-unixfs-file/: CHANGELOG.md  Cargo.toml  README.md
wnfs-unixfs-file/proptest-regressions/: builder.txt
wnfs-unixfs-file/src/: balanced_tree.rs  builder.rs  chunker.rs  content_loader.rs  hamt.rs  lib.rs  protobufs.rs  types.rs  unixfs.rs
wnfs-unixfs-file/src/chunker/: fixed.rs  rabin.rs
wnfs-unixfs-file/src/hamt/: hash_bits.rs
wnfs-wasm/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  lib.rs  package.json  playwright.config.ts  tsconfig.json
wnfs-wasm/examples/graph/: README.md  webpack.config.js
wnfs-wasm/fs/: blockstore.rs  mod.rs
wnfs-wasm/fs/private/: forest.rs
wnfs-wasm/fs/public/: file.rs  node.rs
wnfs-wasm/src/: lib.rs
wnfs-wasm/src/fs/: blockstore.rs  metadata.rs  mod.rs  types.rs  utils.rs
wnfs-wasm/src/loaders/: workerd.js
wnfs-wasm/tests/: mock.ts  private.spec.ts  public.spec.ts  share.spec.ts
wnfs-wasm/tests/server/: index.d.ts  index.ts  webpack.config.cjs
wnfs/benches/: namefilter.rs  sampleable.rs
wnfs/common/: async_serialize.rs  blockstore.rs  utils.rs
wnfs/examples/: README.md  file_variants.rs  mnemonic_based.rs  private.rs  privateref.rs  public.rs  tiered_blockstores.rs  write_proofs.rs
wnfs/private/: directory.rs  file.rs  forest.rs  key.rs  node.rs  previous.rs
wnfs/private/hamt/: hamt.rs  mod.rs  node.rs  strategies.rs
wnfs/proptest-regressions/private/: directory.txt  file.txt  node.txt
wnfs/proptest-regressions/public/: directory.txt
wnfs/public/: directory.rs
wnfs/src/: error.rs  lib.rs  root_tree.rs  traits.rs
wnfs/src/common/: blockstore.rs  encoding.rs  error.rs  link.rs  metadata.rs  mod.rs  utils.rs
wnfs/src/private/: directory.rs  encrypted.rs  file.rs  forest.rs  key.rs  link.rs  mod.rs  mutable_dir.rs  mutdir.rs  node.rs  previous.rs  privateref.rs  share.rs
wnfs/src/public/: directory.rs  file.rs  link.rs  mod.rs  mutable_dir.rs  mutdir.rs  node.rs
wnfs/src/snapshots/: wnfs__root_tree__snapshot_tests__root_filesystems.snap  wnfs__root_tree__snapshot_tests__root_filesystems.snap.new  wnfs__root_tree__snapshot_tests__root_tree.snap
wnfs/src/utils/: common.rs  mod.rs  proptest.rs  test.rs
(+114 files in other folders)
