[workspace]
members = [
	'crates/fs',
	'crates/wasm',
	'wnfs-cli',
	'wnfs-server',
]

[patch.crates-io]
# leaving this section header here for further reference.

# Speedup build on macOS
# See https://blog.rust-lang.org/2021/03/25/Rust-1.51.0.html#splitting-debug-information
[profile.dev]
split-debuginfo = "unpacked"
