[package]
name = "wnfs-bench"
version = "0.1.18"
description = "WNFS Benchmarks"
publish = false
edition = "2021"
license = "Apache-2.0"

[dev-dependencies]
async-std = { version = "1.11", features = ["attributes"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
criterion = { version = "0.4", features = ["async_std"] }
proptest = "1.1"
wnfs = { path = "../wnfs" }
wnfs-common = { path = "../wnfs-common", features = ["test_utils"] }
wnfs-hamt = { path = "../wnfs-hamt", features = ["test_utils"] }
wnfs-namefilter = { path = "../wnfs-namefilter" }

[[bench]]
name = "hamt"
harness = false
path = "hamt.rs"

[[bench]]
name = "namefilter"
harness = false
path = "namefilter.rs"
