[package]
name = "wnfs-bench"
version = "0.1.25"
description = "WNFS Benchmarks"
publish = false
edition = "2021"
license = "Apache-2.0"

[dev-dependencies]
async-std = { version = "1.11", features = ["attributes"] }
blake3 = { version = "1.4", features = ["traits-preview"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
criterion = { version = "0.4", features = ["async_std"] }
proptest = "1.1"
rand = "0.8"
wnfs = { path = "../wnfs" }
wnfs-common = { path = "../wnfs-common", features = ["test_utils"] }
wnfs-hamt = { path = "../wnfs-hamt", features = ["test_utils"] }
wnfs-nameaccumulator = { path = "../wnfs-nameaccumulator" }

[[bench]]
name = "hamt"
harness = false
path = "hamt.rs"

[[bench]]
name = "nameaccumulator"
harness = false
path = "nameaccumulator.rs"
