[package]
name = "wnfs-common"
version = "0.2.0"
description = "Common types for the Webnative Filesystem"
keywords = ["wnfs", "webnative", "ipfs", "decentralisation"]
categories = [
  "filesystem",
  "cryptography",
  "web-programming",
  "wasm",
]
license = "Apache-2.0"
readme = "README.md"
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/wnfs-wg/rs-wnfs/tree/main/wnfs-common"
homepage = "https://fission.codes"
authors = ["The Fission Authors"]

[dependencies]
anyhow = "1.0"
async-once-cell = "0.5"
base64 = { version = "0.21", optional = true }
base64-serde = { version = "0.7", optional = true }
blake3 = "1.8.2"
bytes = { version = "1.4", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
cid = "0.11"
dashmap = "5.5.3"
futures = "0.3"
ipld-core = { version = "0.4", features = ["serde"] }
ipld-dagpb = { version = "0.2", optional = true }
multihash = "0.19"
once_cell = "1.16"
parking_lot = "0.12"
proptest = { version = "1.1", optional = true }
rand_core = "0.6"
serde = { version = "1.0", features = ["rc", "derive"] }
serde_ipld_dagcbor = "0.6"
serde_ipld_dagjson = { version = "0.2", optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "1.0"

[dev-dependencies]
async-std = { version = "1.11", features = ["attributes"] }
base64 = "0.21"
base64-serde = "0.7"
proptest = "1.1"
rand = "0.8"
serde_json = "1.0"

[features]
test_utils = [
  "dep:proptest",
  "dep:base64-serde",
  "dep:base64",
  "dep:ipld-dagpb",
  "dep:serde_ipld_dagjson",
  "dep:serde_json"
]
