[package]
name = "wnfs-hamt"
version = "0.1.22"
description = "IPLD HAMT implementation for Webnative Filesystem"
keywords = ["wnfs", "webnative", "ipfs", "decentralisation"]
categories = [
  "filesystem",
  "cryptography",
  "web-programming",
  "wasm",
]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
repository = "https://github.com/wnfs-wg/rs-wnfs/tree/main/wnfs-hamt"
homepage = "https://fission.codes"
authors = ["The Fission Authors"]

[dependencies]
anyhow = "1.0"
async-once-cell = "0.4"
async-recursion = "1.0"
async-trait = "0.1"
bitvec = { version = "1.0", features = ["serde"] }
blake3 = { version = "1.4", features = ["traits-preview"] }
chrono = { version = "0.4.23", default-features = false, features = ["clock", "std"] }
either = "1.8"
futures = "0.3"
libipld = { version = "0.16", features = ["dag-cbor", "derive", "serde-codec"] }
log = { version = "0.4", optional = true }
multihash = "0.18"
once_cell = "1.16"
proptest = { version = "1.1", optional = true }
rand_core = "0.6"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["rc"] }
thiserror = "1.0"
wnfs-common = { path = "../wnfs-common", version = "0.1.22" }

[dev-dependencies]
async-std = { version = "1.11", features = ["attributes"] }
proptest = "1.1"
rand = "0.8"
test-strategy = "0.3"
wnfs-common = { path = "../wnfs-common", version = "0.1.22", features = ["test_utils"] }

[features]
test_utils = ["proptest"]
