[package]
name = "wnfs-nameaccumulator"
version = "0.1.23"
description = "Cryptographic accumulators for the Webnative Filesystem"
keywords = ["wnfs", "webnative", "ipfs", "decentralisation"]
categories = [
  "filesystem",
  "cryptography",
  "web-programming",
  "wasm",
]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
repository = "https://github.com/wnfs-wg/rs-wnfs/tree/main/wnfs"
homepage = "https://fission.codes"
authors = ["The Fission Authors"]

[dependencies]
anyhow = "1.0"
blake3 = { version = "1.4", features = ["traits-preview"] }
libipld = { version = "0.16", features = ["dag-cbor", "derive", "serde-codec"] }
num-bigint-dig = { version = "0.8.2", features = ["prime", "zeroize"] }
num-integer = "0.1.45"
num-traits = "0.2.15"
once_cell = "1.0"
rand_core = "0.6"
serde = { version = "1.0", features = ["rc"] }
serde_bytes = "0.11.9"
thiserror = "1.0"
zeroize = "1.6"

[dev-dependencies]
hex = "0.4.3"
proptest = "1.1"
rand = "0.8.5"
rand_chacha = "0.3"
test-strategy = "0.3"
