[package]
name = "wnfs-nameaccumulator"
version = "0.1.25"
description = "Cryptographic accumulators for the Webnative Filesystem"
keywords = ["wnfs", "webnative", "ipfs", "decentralisation"]
categories = [
  "filesystem",
  "cryptography",
  "web-programming",
  "wasm",
]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
repository = "https://github.com/wnfs-wg/rs-wnfs/tree/main/wnfs"
homepage = "https://fission.codes"
authors = ["The Fission Authors"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
blake3 = { version = "1.4", features = ["traits-preview"] }
libipld = { version = "0.16", features = ["dag-cbor", "derive", "serde-codec"] }
num-bigint-dig = { version = "0.8.2", features = ["prime", "zeroize"], optional = true }
num-integer = "0.1.45"
num-traits = "0.2.15"
once_cell = "1.0"
rand_core = "0.6"
rug = { version = "1.22", optional = true, default-features = false, features = ["rand", "integer", "num-traits"] }
serde = { version = "1.0", features = ["rc"] }
serde_bytes = "0.11.9"
thiserror = "1.0"
wnfs-common = { path = "../wnfs-common", version = "=0.1.25" }
zeroize = "1.6"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
hex = "0.4.3"
insta = { version = "1.31.0", features = ["json"] }
proptest = "1.1"
rand = "0.8.5"
rand_chacha = "0.3"
serde_json = "1.0.103"
test-strategy = "0.3"
wnfs-common = { path = "../wnfs-common", features = ["test_utils"] }

[features]
default = ["num-bigint-dig"]
rug = ["dep:rug"]
num-bigint-dig = ["dep:num-bigint-dig"]
