[package]
name = "wnfs-namefilter"
version = "0.1.18"
description = "Bloom filter for the Webnative Filesystem"
keywords = ["wnfs", "webnative", "ipfs", "decentralisation"]
categories = [
  "filesystem",
  "cryptography",
  "web-programming",
  "wasm",
]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
repository = "https://github.com/wnfs-wg/rs-wnfs/tree/main/wnfs"
homepage = "https://fission.codes"
authors = ["The Fission Authors"]

[dependencies]
anyhow = "1.0"
async-once-cell = "0.4"
async-trait = "0.1"
bitvec = { version = "1.0", features = ["serde"] }
chrono = { version = "0.4.23", default-features = false, features = ["clock", "std"] }
futures = "0.3"
libipld = { version = "0.16", features = ["dag-cbor", "derive", "serde-codec"] }
multihash = "0.18"
proptest = { version = "1.1", optional = true }
rand_core = "0.6"
serde = { version = "1.0", features = ["rc"] }
sha3 = "0.10"
thiserror = "1.0"
wnfs-common = { path = "../wnfs-common", version = "0.1.18" }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
proptest = "1.1"
rand = "0.8"
test-strategy = "0.3"
