[package]
name = "wnfs-unixfs-file"
version = "0.1.25"
description = "IPLD UnixFS File implementation for Webnative Filesystem"
keywords = ["wnfs", "unixfs", "webnative", "ipfs", "decentralisation"]
categories = [
  "filesystem",
  "cryptography",
  "web-programming",
  "wasm",
]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
repository = "https://github.com/wnfs-wg/rs-wnfs/tree/main/wnfs-unixfs-file"
homepage = "https://fission.codes"
authors = ["The Fission Authors"]

[dependencies]
anyhow = "1.0"
async-once-cell = "0.5"
async-recursion = "1.0"
async-stream = "0.3.5"
async-trait = "0.1"
bitvec = { version = "1.0", features = ["serde"] }
blake3 = { version = "1.4", features = ["traits-preview"] }
bytes = "1.5"
chrono = { version = "0.4.23", default-features = false, features = ["clock", "std"] }
data-encoding = "2.5.0"
either = "1.8"
fastmurmur3 = "0.2.0"
futures = "0.3"
insta = { version = "1.30", features = ["json"] }
libipld = { version = "0.16", features = ["dag-cbor", "derive", "serde-codec"] }
log = { version = "0.4", optional = true }
multihash = "0.18"
num_enum = "0.5"
once_cell = "1.16"
proptest = { version = "1.1", optional = true }
prost = "0.12"
rand = "0.8"
rand_core = "0.6"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["rc"] }
serde-byte-array = "0.1.2"
testresult = "0.3.0"
thiserror = "1.0"
tokio = { version = "1.34", features = ["fs", "rt", "macros"] }
tokio-util = "0.7.10"
tracing = "0.1"
wnfs-common = { path = "../wnfs-common", version = "=0.1.25" }

[dev-dependencies]
async-std = { version = "1.11", features = ["attributes"] }
insta = "1.30"
proptest = "1.1"
rand = "0.8"
rand_chacha = "0.3.1"
serde_json = "1.0.103"
tempfile = "3.8.1"
test-strategy = "0.3"
tokio-test = "0.4.3"
wnfs-common = { path = "../wnfs-common", features = ["test_utils"] }

[features]
test_utils = ["proptest"]
