[package]
name = "wnfs"
version = "0.1.22"
description = "WebNative filesystem core implementation"
keywords = ["wnfs", "webnative", "ipfs", "decentralisation"]
categories = [
  "filesystem",
  "cryptography",
  "web-programming",
  "wasm",
]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
repository = "https://github.com/wnfs-wg/rs-wnfs/tree/main/wnfs"
homepage = "https://fission.codes"
authors = ["The Fission Authors"]

[dependencies]
aes-gcm = "0.10"
aes-kw = { version = "0.2", features = ["alloc"] }
anyhow = "1.0"
async-once-cell = "0.4"
async-recursion = "1.0"
async-stream = "0.3"
async-trait = "0.1"
blake3 = { version = "1.4", features = ["traits-preview"] }
bytes = "1.4.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
futures = "0.3"
libipld-core = { version = "0.16" }
multihash = "0.19"
once_cell = "1.16"
proptest = { version = "1.1", optional = true }
rand_core = "0.6"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["rc"] }
serde_ipld_dagcbor = "0.3.0"
skip_ratchet = { git = "https://github.com/wnfs-wg/rs-skip-ratchet", branch = "matheus23/allow-other-hash-algs", version = "0.2.1", features = ["serde"] }
thiserror = "1.0"
wnfs-common = { path = "../wnfs-common", version = "0.1.22" }
wnfs-hamt = { path = "../wnfs-hamt", version = "0.1.22" }
wnfs-nameaccumulator = { path = "../wnfs-nameaccumulator", version = "0.1.22" }

[dev-dependencies]
async-std = { version = "1.11", features = ["attributes"] }
env_logger = "0.10"
proptest = "1.1"
rand = "0.8"
rand_chacha = "0.3"
rsa = "0.9"
sha2 = "0.10"
test-log = "0.2"
test-strategy = "0.3"
tiny-bip39 = "1.0"

[lib]
name = "wnfs"
path = "src/lib.rs"

[features]
default = []
wasm = []
