[package]
name = "wnfs"
version = "0.1.8"
description = "WebNative filesystem core implementation"
keywords = ["wnfs", "webnative", "ipfs", "decentralisation"]
categories = [
  "filesystem",
  "cryptography",
  "web-programming",
  "wasm",
]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
repository = "https://github.com/WebNativeFileSystem/rs-wnfs/tree/main/crates/fs"
homepage = "https://fission.codes"
authors = ["The Fission Authors"]

[dependencies]
aes-gcm = "0.9"
anyhow = "1.0"
async-once-cell = "0.4"
async-recursion = "1.0"
async-std = { version = "1.11", features = ["attributes"] }
async-stream = "0.3"
async-trait = "0.1"
bitvec = { version = "1.0", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
futures = "0.3"
futures-util = "0.3"
hashbrown = "0.12"
lazy_static = "1.4"
libipld = { version = "0.14", features = ["dag-cbor", "derive", "serde-codec"] }
log = "0.4"
multihash = "0.16"
rand_core = "0.6"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["rc"] }
sha3 = "0.10"
skip_ratchet = { version = "0.1", features = ["serde"] }
thiserror = "1.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
env_logger = "0.9"
proptest = "1.0"
rand = "0.8"
test-log = "0.2"
test-strategy = "0.2"

[lib]
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = []
