[package]
name = "wasm-wnfs"
version = "0.1.7"
description = "WebNative Filesystem API (WebAssembly)"
keywords = ["wnfs", "webnative", "ipfs", "decentralisation"]
categories = [
  "filesystem",
  "cryptography",
  "web-programming",
  "wasm",
]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
repository = "https://github.com/WebNativeFileSystem/rs-wnfs/tree/main/crates/wasm"
homepage = "https://fission.codes"
authors = ["The Fission Authors"]

[dependencies]
wnfs = { path = "../fs", version = "0.1.0" }
wasm-bindgen = { version = "0.2", optional = true, features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }
chrono = { version = "0.4", features = ["wasmbind"] }
anyhow = "1.0"
async-trait = "0.1"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }
cfg-if = "1.0.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
path = "lib.rs"
crate-type = ["cdylib" , "rlib"]

[features]
default = ["js"]
wasm = ["wnfs/wasm"]
js = [
  "wasm",
  "wasm-bindgen",
  "wasm-bindgen-futures",
  "js-sys",
  "chrono/wasmbind",
  "wee_alloc",
  "console_error_panic_hook",
]
web = ["wasm", "web-sys"]
