[package]
name = "wasm-wnfs"
version = "0.1.9"
description = "WebNative Filesystem API (WebAssembly)"
keywords = ["wnfs", "webnative", "ipfs", "decentralisation"]
categories = [
  "filesystem",
  "cryptography",
  "web-programming",
  "wasm",
]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
repository = "https://github.com/WebNativeFileSystem/rs-wnfs/tree/main/crates/wasm"
homepage = "https://fission.codes"
authors = ["The Fission Authors"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
cfg-if = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "wasmbind"] }
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = { version = "0.3", optional = true }
libipld = "0.14"
rand_core = "0.6"
wasm-bindgen = { version = "0.2", optional = true, features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true }
wnfs = { path = "../fs", version = "0.1.9" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["js"]
wasm = ["wnfs/wasm"]
js = [
  "wasm",
  "wasm-bindgen",
  "wasm-bindgen-futures",
  "js-sys",
  "chrono/wasmbind",
  "console_error_panic_hook",
]
web = ["wasm", "web-sys"]
